# otc

./: autogen.sh  autoregen  configure.ac
src/: Diagnostics.cpp  Diagnostics.h  Makefile.am  main.cpp  otc.lpp  otc.ypp
