#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(otc, [1.0], [jcmvbkbc@gmail.com])

AM_INIT_AUTOMAKE([])

AM_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([ Makefile src/Makefile ])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
